--- a/static/styles.css
+++ b/static/styles.css
@@ -22,7 +22,7 @@ position: absolute;
 left: 25%;
     text-align:center;
     width: 50vw;
-    background-color: #cce6ff;
+    background-color: #f24525;
 }
 
 .container{
